--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
+<div class="header">
+    <div class="left">
+<a routerLink="/home">Movie</a>
+<a routerLink="/movie">Home</a>
+<a routerLink="/about">About</a>
+</div>
+<div class="right">
+    Angular
+</div>
+</div>
 <router-outlet></router-outlet>
+
